# chat_api

./: .gitignore  LICENSE  alembic.ini  main.py  pyproject.toml  requirments.txt
app/ai/: base.py  ollama.py  registry.py  schemas.py
app/ai/chains/: llm_adapter.py  rag_chain.py
app/ai/prompts/: rag_prompt.py
app/core/: config.py  database.py  security.py
app/models/: conversation.py  message.py  user.py
app/routes/: auth.py  chats.py  ingest.py  rag.py  router.py  vector.py
app/schemas/: conversation.py  message.py  pagination.py  user.py
app/services/: auth_service.py  chat_service.py
app/vector/: base.py  chroma.py  schemas.py  utils.py
migrations/: env.py
migrations/versions/: 1a2358608487_create_users_table.py  5e3188ced068_add_conversations_and_message.py  a3d370edc0d8_init_migration.py  b671ca25473b_add_message_edit_and_soft_delete.py  cae0339ef1cc_add_message_edit_and_soft_delete.py  d1f3e9a6c123_fix_is_deleted_default_and_nulls.py
